# exodus

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  run.py  setup.py
collections/wpatva/: import_278_20230714221151_432_errored_entries (1).csv  import_280_20230715122802_434_errored_entries.csv  import_282_20230715231239_436_errored_entries.csv  import_284_20230716133401_438_errored_entries.csv  import_286_20230717114239_440_errored_entries.csv  import_288_20230718113734_442_errored_entries.csv
configs/: samvera_default.yml  utk_dc.yml  utk_dc_no_uris.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
exodus/: exodus.py
exodus/helpers/: __init__.py  batch_delete.py  change_visibility.py  chunk_works.py  combine_importers.py  copy_failures_from_original_import_file.py  count_books_and_pages.py  curate_for_filesets_and_attachments.py  diff_headers.py  enhance_image_works.py  find_and_fix_private_works.py  find_missing_basic_images.py  get_collection_data.py  get_pid_and_type.py  get_pids_to_download.py  make_institution_only.py  restrict_works_and_attachments.py  risearch.py  split_preserve.py
exodus/validation/: validation.py
fixtures/: archivision:10902.xml  archivision:12879.xml  archivision:4572.xml  archivision:5175.xml  arrow_1.xml  arrowmont_10.xml  brehm_1.xml  dabney_216.xml  roth_10.xml  vanvactor_10012.xml  volvoices_3827.xml
organizer/: organizer.py
policies_fixtures/: no_restrictions.xml  restricted_files.xml
risearch/: risearch.py
utilities/: find_missing_basic_images.py  get_uniques_in_list.py
(+14 files in other folders)
