[tool.poetry]
name = "exodus"
version = "0.1.0"
description = "Scripts to aid in the exodus from the islands to the mainland"
authors = ["Mark Baggett <mbagget1@utk.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
lxml = "^4.9.1"
xmltodict = "^0.13.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
